--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "@prisma/client": "~6.8.2",
     "@simplewebauthn/browser": "^13.1.0",
     "@simplewebauthn/server": "^13.1.1",
-    "rwsdk": "0.1.2"
+    "@tailwindcss/vite": "^4.1.11",
+    "rwsdk": "0.1.2",
+    "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
     "@cloudflare/vite-plugin": "1.7.4",
@@ -39,7 +41,9 @@
     "@types/node": "^22.14.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "daisyui": "^5.0.43",
     "prisma": "~6.8.2",
+    "tw-animate-css": "^1.3.4",
     "typescript": "^5.8.3",
     "vibe-rules": "^0.2.31",
     "vite": "^6.2.6",
