feat: Implement home page components and layout
- Added HeroSection, FeaturedProperties, WhyChooseUs, and UserStatus components to Home page.
- Integrated mock data for featured properties.
- Updated styles to include new themes and improved design.

feat: Enhance styling with DaisyUI themes

- Defined light and dark themes for the application using DaisyUI.
- Customized color schemes and styles for a cohesive look.

feat: Seed script improvements and sample data

- Expanded seed script to include multiple sample properties.
- Added logging for created properties and database statistics.

fix: Update TypeScript configuration for component paths

- Adjusted tsconfig.json to include paths for components.

chore: Update Vite configuration for TypeScript paths

- Integrated vite-tsconfig-paths plugin for better path resolution.

feat: Create new client components

- Developed InteractiveButton, NewsletterSignup, PropertyCardActions, and ThemeSwitcher components for improved user interaction.

feat: Implement property card and actions

- Created PropertyCard component to display property details.
- Added actions for viewing details and contacting property listers.

feat: Develop property service for data handling

- Created PropertyService to manage property data fetching and transformations.
- Included mock data for development and fallback mechanisms.

feat: Add database migration for Property and PropertyFavorite models

- Created SQL migration to define Property and PropertyFavorite tables with necessary fields and constraints.

feat: Update index file for component exports

- Organized component exports for easier imports throughout the application.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
     ],
     "paths": {
       "@/*": ["./src/*"],
+      "@/components/*": ["./src/app/components/*"],
       "@generated/*": ["./generated/*"]
     },
     /* Enable importing .json files */
