--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "typescript": "^5.8.3",
     "vibe-rules": "^0.2.31",
     "vite": "^6.2.6",
+    "vite-tsconfig-paths": "^5.1.4",
     "wrangler": "^4.20.5"
   },
   "pnpm": {
