--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@simplewebauthn/browser": "^13.1.0",
     "@simplewebauthn/server": "^13.1.1",
     "@tailwindcss/vite": "^4.1.11",
+    "next-themes": "^0.4.6",
     "rwsdk": "0.1.2",
     "tailwindcss": "^4.1.11"
   },
